--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^22.1.0",
     "prettier": "3.0.3",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5",
     "vitest": "^0.34.6"
   },
